src/lexer/meta_lexis.c
/* Generated by re2c 3.1 on Wed Jul 26 05:20:36 2023 */
#line 1 "src/lexer/meta_lexis.re"
// findlib META lexer
// re2c $INPUT -o $OUTPUT -i
#include <assert.h>
#include <errno.h>
#ifdef __linux__
#include <linux/limits.h>
#else
#include <limits.h>
#endif
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include <unistd.h>

#include <sys/errno.h>

#include "meta_lexis.h"

#if EXPORT_INTERFACE
#define BUFSIZE 1024
#ifndef MAX_DEPS
#define MAX_DEPS 64
#endif
#endif

const char *deps[MAX_DEPS];
int curr_tag = 0;

#if EXPORT_INTERFACE
union meta_token
{
    char *s;
};

struct meta_lexer_s
{
    const char *filename;
    const char *tok;
    const char *cursor;
    const char *limit;
    const char *marker;
};
#endif

/* static void mtag(const char *t) */
static void mtag(int t)
{
    (void)t;
    /* fprintf(stderr, "mtag ctor idx: %d, s: %.22s\n", curr_tag, t); */
    /* deps[curr_tag++] = t; */
}


/* static void print_tags() { */
/*     /\* fprintf(stderr, "printing %d tags:\n", curr_tag/2); *\/ */
/*     for (int i=0; i < curr_tag/2 ; i++) { */
/*         fprintf(stderr, "\tVALTOK: '%*s'\n", (int)(deps[i*2+1] - deps[i*2]), deps[i*2]); */
/*     } */
/*     /\* fprintf(stderr, "done\n"); *\/ */
/* } */

#define YYMTAGP(t) mtag(YYCURSOR)
#define YYMTAGN(t) mtag(NULL)

int get_next_meta_token(struct meta_lexer_s *lexer, union meta_token *mtok)
{
    /* const char *YYMARKER; */

    /* stags */
    const char *s1, *s2;        /* dq strings */
    /* const char *pkg1, *pkg2; */
    /* const char *pred1, *pred2; */
    /* const char *txt1, *txt2; */

    /* mtags */
    int f1; (void)f1;
    int f2; (void)f2;
    /* int dep1, dep2; */
    /* const char *vtok1, *vtok2; */

    /* int h1, h2; */
    
#line 86 "bazel-out/darwin_arm64-fastbuild/bin/src/lexer/meta_lexis.c"
const char *yyt1;const char *yyt2;const char *yyt3;
#line 82 "src/lexer/meta_lexis.re"

    
#line 91 "bazel-out/darwin_arm64-fastbuild/bin/src/lexer/meta_lexis.c"
int yytm4;int yytm5;
#line 83 "src/lexer/meta_lexis.re"

loop:
    curr_tag = 0;
    lexer->tok = lexer->cursor;
    
#line 99 "bazel-out/darwin_arm64-fastbuild/bin/src/lexer/meta_lexis.c"
yytm4 = -1;yytm5 = -1;
#line 87 "src/lexer/meta_lexis.re"

    
#line 104 "bazel-out/darwin_arm64-fastbuild/bin/src/lexer/meta_lexis.c"
{
	char yych;
	unsigned int yyaccept = 0;
	yych = *lexer->cursor;
	switch (yych) {
		case 0x00: goto yy1;
		case '\t':
		case '\n':
		case ' ': goto yy4;
		case '"': goto yy6;
		case '#': goto yy7;
		case '(': goto yy8;
		case ')': goto yy10;
		case '+': goto yy11;
		case ',': goto yy12;
		case '-':
		case '.':
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'q':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z':
			yyt2 = lexer->cursor;
			goto yy13;
		case '=': goto yy16;
		case 'd':
			yyt2 = lexer->cursor;
			goto yy18;
		case 'p':
			yyt2 = lexer->cursor;
			goto yy19;
		case 'r':
			yyt2 = lexer->cursor;
			goto yy20;
		default: goto yy2;
	}
yy1:
	++lexer->cursor;
#line 232 "src/lexer/meta_lexis.re"
	{
        /* printf("ending\n"); */
        return 0;
        }
#line 203 "bazel-out/darwin_arm64-fastbuild/bin/src/lexer/meta_lexis.c"
yy2:
	++lexer->cursor;
yy3:
#line 228 "src/lexer/meta_lexis.re"
	{
            fprintf(stderr, "ERROR lexing: %s: %s\n", lexer->filename, lexer->cursor);
            exit(-1);
        }
#line 212 "bazel-out/darwin_arm64-fastbuild/bin/src/lexer/meta_lexis.c"
yy4:
	yyaccept = 0;
	yych = *(lexer->marker = ++lexer->cursor);
	switch (yych) {
		case '\t':
		case '\n':
		case ' ': goto yy4;
		case '(': goto yy21;
		case '-':
		case '.':
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'q':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z':
			yyt2 = lexer->cursor;
			goto yy13;
		case '=': goto yy16;
		case 'd':
			yyt2 = lexer->cursor;
			goto yy18;
		case 'p':
			yyt2 = lexer->cursor;
			goto yy19;
		case 'r':
			yyt2 = lexer->cursor;
			goto yy20;
		default: goto yy5;
	}
yy5:
#line 122 "src/lexer/meta_lexis.re"
	{ goto loop; }
#line 300 "bazel-out/darwin_arm64-fastbuild/bin/src/lexer/meta_lexis.c"
yy6:
	yyaccept = 1;
	yych = *(lexer->marker = ++lexer->cursor);
	switch (yych) {
		case 0x00: goto yy3;
		case ' ':
		case '(':
		case ')':
		case '+':
		case ',':
		case '=':
			yyt1 = lexer->cursor;
			goto yy24;
		case '"': goto yy25;
		default:
			yyt1 = lexer->cursor;
			goto yy23;
	}
yy7:
	yych = *++lexer->cursor;
	switch (yych) {
		case '\n': goto yy26;
		default: goto yy7;
	}
yy8:
	yyaccept = 2;
	yych = *(lexer->marker = ++lexer->cursor);
	switch (yych) {
		case '\t':
		case '\n':
		case ' ':
		case ',':
			yyt1 = lexer->cursor;
			goto yy27;
		case ')':
			yyt2 = lexer->cursor;
			mtag(yytm5);
			mtag(yytm4);
			yyt1 = lexer->cursor;
			goto yy28;
		case '-':
		case '.':
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z':
			mtag(yytm4);
			yyt1 = lexer->cursor;
			goto yy30;
		default: goto yy9;
	}
yy9:
#line 193 "src/lexer/meta_lexis.re"
	{ return LPAREN; }
#line 414 "bazel-out/darwin_arm64-fastbuild/bin/src/lexer/meta_lexis.c"
yy10:
	++lexer->cursor;
#line 194 "src/lexer/meta_lexis.re"
	{ return RPAREN; }
#line 419 "bazel-out/darwin_arm64-fastbuild/bin/src/lexer/meta_lexis.c"
yy11:
	yych = *++lexer->cursor;
	switch (yych) {
		case '=': goto yy31;
		default: goto yy3;
	}
yy12:
	++lexer->cursor;
#line 121 "src/lexer/meta_lexis.re"
	{ goto loop; }
#line 430 "bazel-out/darwin_arm64-fastbuild/bin/src/lexer/meta_lexis.c"
yy13:
	yych = *++lexer->cursor;
yy14:
	switch (yych) {
		case '\t':
		case '\n':
		case ' ':
			yyt3 = lexer->cursor;
			goto yy32;
		case '-':
		case '.':
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy13;
		default:
			yyt3 = lexer->cursor;
			goto yy15;
	}
yy15:
	s1 = yyt2;
	s2 = yyt3;
#line 167 "src/lexer/meta_lexis.re"
	{
            mtok->s = strndup(s1, (size_t)(s2 - s1));
            return VNAME;
        }
#line 517 "bazel-out/darwin_arm64-fastbuild/bin/src/lexer/meta_lexis.c"
yy16:
	yych = *++lexer->cursor;
	switch (yych) {
		case '\t':
		case '\n':
		case ' ': goto yy16;
		default: goto yy17;
	}
yy17:
#line 226 "src/lexer/meta_lexis.re"
	{ return EQ; }
#line 529 "bazel-out/darwin_arm64-fastbuild/bin/src/lexer/meta_lexis.c"
yy18:
	yych = *++lexer->cursor;
	switch (yych) {
		case 'i': goto yy33;
		default: goto yy14;
	}
yy19:
	yych = *++lexer->cursor;
	switch (yych) {
		case 'a': goto yy34;
		case 'p': goto yy35;
		default: goto yy14;
	}
yy20:
	yych = *++lexer->cursor;
	switch (yych) {
		case 'e': goto yy36;
		default: goto yy14;
	}
yy21:
	yych = *++lexer->cursor;
	switch (yych) {
		case '\t':
		case '\n':
		case ' ':
		case ',':
			yyt1 = lexer->cursor;
			goto yy27;
		case ')':
			yyt2 = lexer->cursor;
			mtag(yytm5);
			mtag(yytm4);
			yyt1 = lexer->cursor;
			goto yy28;
		case '-':
		case '.':
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z':
			mtag(yytm4);
			yyt1 = lexer->cursor;
			goto yy30;
		default: goto yy22;
	}
yy22:
	lexer->cursor = lexer->marker;
	switch (yyaccept) {
		case 0: goto yy5;
		case 1: goto yy3;
		case 2: goto yy9;
		case 3:
			yyt3 = lexer->cursor;
			goto yy15;
		default: goto yy15;
	}
yy23:
	yych = *++lexer->cursor;
	switch (yych) {
		case 0x00: goto yy22;
		case ' ':
		case '(':
		case ')':
		case '+':
		case ',':
		case '=': goto yy24;
		case '"': goto yy37;
		default: goto yy23;
	}
yy24:
	yych = *++lexer->cursor;
	switch (yych) {
		case 0x00: goto yy22;
		case '"': goto yy38;
		default: goto yy24;
	}
yy25:
	++lexer->cursor;
	s1 = lexer->cursor - 1;
	s2 = lexer->cursor - 1;
#line 182 "src/lexer/meta_lexis.re"
	{
            mtok->s = NULL;
            return WORD;
        }
#line 674 "bazel-out/darwin_arm64-fastbuild/bin/src/lexer/meta_lexis.c"
yy26:
	++lexer->cursor;
#line 124 "src/lexer/meta_lexis.re"
	{
            /* return COMMENT; */
            goto loop;          /* skip comments */
        }
#line 682 "bazel-out/darwin_arm64-fastbuild/bin/src/lexer/meta_lexis.c"
yy27:
	yych = *++lexer->cursor;
	switch (yych) {
		case '\t':
		case '\n':
		case ' ':
		case ',': goto yy27;
		case '-':
		case '.':
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z':
			mtag(yytm4);
			goto yy30;
		default: goto yy22;
	}
yy28:
	yych = *++lexer->cursor;
	switch (yych) {
		case '\t':
		case '\n':
		case ' ': goto yy28;
		default: goto yy29;
	}
yy29:
	s1 = yyt1;
	f1 = yytm4;
	f2 = yytm5;
	s2 = yyt2;
#line 133 "src/lexer/meta_lexis.re"
	{
        /* we leave it to the parser to tokenize, now that we know each flag is syntactically correct */
            mtok->s = strndup(s1, (size_t)(s2 - s1));
            return FLAGS;

        }
#line 779 "bazel-out/darwin_arm64-fastbuild/bin/src/lexer/meta_lexis.c"
yy30:
	yych = *++lexer->cursor;
	switch (yych) {
		case '\t':
		case '\n':
		case ' ':
		case ',':
			mtag(yytm5);
			goto yy39;
		case ')':
			yyt2 = lexer->cursor;
			mtag(yytm5);
			goto yy28;
		case '-':
		case '.':
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy30;
		default: goto yy22;
	}
yy31:
	++lexer->cursor;
#line 225 "src/lexer/meta_lexis.re"
	{ return PLUSEQ; }
#line 864 "bazel-out/darwin_arm64-fastbuild/bin/src/lexer/meta_lexis.c"
yy32:
	yych = *++lexer->cursor;
	switch (yych) {
		case '\t':
		case '\n':
		case ' ': goto yy32;
		default: goto yy15;
	}
yy33:
	yych = *++lexer->cursor;
	switch (yych) {
		case 'r': goto yy40;
		default: goto yy14;
	}
yy34:
	yych = *++lexer->cursor;
	switch (yych) {
		case 'c': goto yy41;
		default: goto yy14;
	}
yy35:
	yych = *++lexer->cursor;
	switch (yych) {
		case 'x': goto yy42;
		default: goto yy14;
	}
yy36:
	yych = *++lexer->cursor;
	switch (yych) {
		case 'q': goto yy43;
		default: goto yy14;
	}
yy37:
	++lexer->cursor;
	s1 = yyt1;
	s2 = lexer->cursor - 1;
#line 172 "src/lexer/meta_lexis.re"
	{
            mtok->s = strndup(s1, (size_t)(s2 - s1));
            return WORD;
        }
#line 906 "bazel-out/darwin_arm64-fastbuild/bin/src/lexer/meta_lexis.c"
yy38:
	++lexer->cursor;
	s1 = yyt1;
	s2 = lexer->cursor - 1;
#line 177 "src/lexer/meta_lexis.re"
	{
            mtok->s = strndup(s1, (size_t)(s2 - s1));
            return WORDS;
        }
#line 916 "bazel-out/darwin_arm64-fastbuild/bin/src/lexer/meta_lexis.c"
yy39:
	yych = *++lexer->cursor;
	switch (yych) {
		case '\t':
		case '\n':
		case ' ':
		case ',': goto yy39;
		case ')':
			yyt2 = lexer->cursor;
			goto yy28;
		case '-':
		case '.':
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z':
			mtag(yytm4);
			goto yy30;
		default: goto yy22;
	}
yy40:
	yych = *++lexer->cursor;
	switch (yych) {
		case 'e': goto yy44;
		default: goto yy14;
	}
yy41:
	yych = *++lexer->cursor;
	switch (yych) {
		case 'k': goto yy45;
		default: goto yy14;
	}
yy42:
	yych = *++lexer->cursor;
	switch (yych) {
		case '_': goto yy46;
		default: goto yy14;
	}
yy43:
	yych = *++lexer->cursor;
	switch (yych) {
		case 'u': goto yy47;
		default: goto yy14;
	}
yy44:
	yych = *++lexer->cursor;
	switch (yych) {
		case 'c': goto yy48;
		default: goto yy14;
	}
yy45:
	yych = *++lexer->cursor;
	switch (yych) {
		case 'a': goto yy49;
		default: goto yy14;
	}
yy46:
	yych = *++lexer->cursor;
	switch (yych) {
		case 'r': goto yy50;
		default: goto yy14;
	}
yy47:
	yych = *++lexer->cursor;
	switch (yych) {
		case 'i': goto yy51;
		default: goto yy14;
	}
yy48:
	yych = *++lexer->cursor;
	switch (yych) {
		case 't': goto yy52;
		default: goto yy14;
	}
yy49:
	yych = *++lexer->cursor;
	switch (yych) {
		case 'g': goto yy53;
		default: goto yy14;
	}
yy50:
	yych = *++lexer->cursor;
	switch (yych) {
		case 'u': goto yy54;
		default: goto yy14;
	}
yy51:
	yych = *++lexer->cursor;
	switch (yych) {
		case 'r': goto yy55;
		default: goto yy14;
	}
yy52:
	yych = *++lexer->cursor;
	switch (yych) {
		case 'o': goto yy56;
		default: goto yy14;
	}
yy53:
	yych = *++lexer->cursor;
	switch (yych) {
		case 'e': goto yy57;
		default: goto yy14;
	}
yy54:
	yych = *++lexer->cursor;
	switch (yych) {
		case 'n': goto yy58;
		default: goto yy14;
	}
yy55:
	yych = *++lexer->cursor;
	switch (yych) {
		case 'e': goto yy59;
		default: goto yy14;
	}
yy56:
	yych = *++lexer->cursor;
	switch (yych) {
		case 'r': goto yy60;
		default: goto yy14;
	}
yy57:
	yyaccept = 3;
	yych = *(lexer->marker = ++lexer->cursor);
	switch (yych) {
		case '\t':
		case '\n':
		case ' ':
			yyt3 = lexer->cursor;
			goto yy61;
		case '"': goto yy62;
		default: goto yy14;
	}
yy58:
	yych = *++lexer->cursor;
	switch (yych) {
		case 't': goto yy63;
		default: goto yy14;
	}
yy59:
	yych = *++lexer->cursor;
	switch (yych) {
		case 's': goto yy64;
		default: goto yy14;
	}
yy60:
	yych = *++lexer->cursor;
	switch (yych) {
		case 'y': goto yy66;
		default: goto yy14;
	}
yy61:
	yyaccept = 4;
	yych = *(lexer->marker = ++lexer->cursor);
	switch (yych) {
		case '\t':
		case '\n':
		case ' ': goto yy61;
		case '"': goto yy62;
		default: goto yy15;
	}
yy62:
	yych = *++lexer->cursor;
	switch (yych) {
		case '-':
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z':
			yyt1 = lexer->cursor;
			goto yy67;
		default: goto yy22;
	}
yy63:
	yych = *++lexer->cursor;
	switch (yych) {
		case 'i': goto yy68;
		default: goto yy14;
	}
yy64:
	yych = *++lexer->cursor;
	switch (yych) {
		case '\t':
		case '\n':
		case ' ':
			yyt1 = lexer->cursor;
			goto yy69;
		case '-':
		case '.':
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy13;
		default:
			yyt1 = lexer->cursor;
			goto yy65;
	}
yy65:
	s2 = yyt1;
	s1 = yyt1 - 8;
